Scrollbar layout fix

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -970,6 +970,7 @@ ul.nav {
 	&::-webkit-scrollbar {
 		display: none !important;
 	}
+	width: 100% !important;
 }
 .vb > .vb-dragger > .vb-dragger-styler {
 	-webkit-backface-visibility: hidden;
